# uniparser-yawarana

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  CITATION.cff  MANIFEST.in  README.md  compile_parser.py  pyproject.toml  setup.cfg  stats.md
.github/workflows/: build.yml  lint.yml  tests.yml
compilation/: load_dictionary_roots.py
data/: .~lock.roots.csv#  README.md  bad_analyses.yaml  bound_roots.csv  clitics.csv  clitics.txt  derivations.txt  disambiguation.cg3  etym_lexemes.csv  manual_lexemes.txt  manual_roots.csv  noun_paradigms.yaml  paradigms.txt  paradigms.yaml  roots.csv
data/derivations/: README.md  detrz.csv  kavbz.csv  macaus.csv  misc_derivations.csv  tavbz.csv
src/uniparser_yawarana/: __init__.py
src/uniparser_yawarana/data/: bad_analyses.txt  bad_segmentations.yaml  clitics.txt  derivations.txt  disambiguation.cg3  etym_lookup.yaml  lexemes.txt  paradigms.txt  pseudoclitics.txt
src/uniparser_yawarana/data/default/: bad_analyses.txt  clitics.txt  derivations.txt  disambiguation.cg3  lexemes.txt  paradigms.txt
src/uniparser_yawarana/data/etym/: bad_analyses.txt  clitics.txt  derivations.txt  lexemes.txt  paradigms.txt
tests/: conftest.py  test_clitics.py  test_derivations.py  test_disambiguation.py  test_inflection.py  test_parsing.py
