[metadata]
author = Florian Matter
author_email = florianmatter@gmail.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description = A UniParser implementation for morphologically parsing and annotating Yawarana material.
keywords =
    linguistics
    morphology
long_description = file: README.md
long_description_content_type = text/markdown
name = uniparser_yawarana
project_urls =
    Bug Tracker = https://github.com/fmatter/uniparser-yawarana/issues
url = https://github.com/fmatter/uniparser-yawarana
version = 0.0.6.dev

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src
install_requires =
    uniparser-morph >= 2.5.0
    importlib_resources >= 5.4.0

[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.extras_require]
dev =
    bump2version
    coverage [toml]
    prospector[with_pyroma]==1.7.6
    pylint==2.14.1
    isort
    pytest
    pytest-cov
    sphinx
    sphinx_rtd_theme
    sphinx-autoapi
    tox
    myst_parser
    flake8
publishing =
    twine
    wheel

[options.packages.find]
include = uniparser_yawarana, uniparser_yawarana.*
where = src

[isort]
lines_after_imports = 2
force_single_line = 1
no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party = uniparser_yawarana
src_paths = uniparser_yawarana,tests
line_length = 120

[flake8]
max-line-length = 88
extend-ignore = E203

[tool:pytest]
addopts = --cov
testpaths = tests

[coverage:run]
source =
    uniparser_yawarana

[coverage:report]
show_missing = true